crates/pg_syntax/tests/snapshots/postgres_regress/money@60.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '9223372036854775807'::money;"
---
SelectStmt@0..36
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..35
    TypeCast@7..35
      AConst@7..28
        Sconst@7..28 "'9223372036854775807'"
      Typecast@28..30 "::"
      TypeName@30..35
        Ident@30..35 "money"
  Ascii59@35..36 ";"

