crates/pg_syntax/tests/snapshots/postgres_regress/money@61.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '-12345'::money;"
---
SelectStmt@0..23
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..22
    TypeCast@7..22
      AConst@7..15
        Sconst@7..15 "'-12345'"
      Typecast@15..17 "::"
      TypeName@17..22
        Ident@17..22 "money"
  Ascii59@22..23 ";"

