crates/pg_syntax/tests/snapshots/postgres_regress/money@62.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '-1234567890'::money;"
---
SelectStmt@0..28
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..27
    TypeCast@7..27
      AConst@7..20
        Sconst@7..20 "'-1234567890'"
      Typecast@20..22 "::"
      TypeName@22..27
        Ident@22..27 "money"
  Ascii59@27..28 ";"

