crates/pg_syntax/tests/snapshots/postgres_regress/money@63.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '-12345678901234567'::money;"
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..34
    TypeCast@7..34
      AConst@7..27
        Sconst@7..27 "'-12345678901234567'"
      Typecast@27..29 "::"
      TypeName@29..34
        Ident@29..34 "money"
  Ascii59@34..35 ";"

