crates/pg_syntax/tests/snapshots/postgres_regress/money@67.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '($123,456.78)'::money;"
---
SelectStmt@0..30
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..29
    TypeCast@7..29
      AConst@7..22
        Sconst@7..22 "'($123,456.78)'"
      Typecast@22..24 "::"
      TypeName@24..29
        Ident@24..29 "money"
  Ascii59@29..30 ";"

