crates/pg_syntax/tests/snapshots/postgres_regress/money@7.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT m / '2'::money FROM money_data;"
---
SelectStmt@0..38
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..21
    AExpr@7..21
      ColumnRef@7..8
        Ident@7..8 "m"
      Whitespace@8..9 " "
      Ascii47@9..10 "/"
      Whitespace@10..11 " "
      TypeCast@11..21
        AConst@11..14
          Sconst@11..14 "'2'"
        Typecast@14..16 "::"
        TypeName@16..21
          Ident@16..21 "money"
  Whitespace@21..22 " "
  From@22..26 "FROM"
  Whitespace@26..27 " "
  RangeVar@27..37
    Ident@27..37 "money_data"
  Ascii59@37..38 ";"

